<resources>
    <string name="app_name">线易购</string>
    <string name="title_activity_mine">MineActivity</string>

    <string name="action_settings1">发布</string>
    <string name="copyright">Copyright@2016</string>
    <string name="company">河北弘飞线缆集团有限公司</string>
    <!--tabbar_bottoom-->
    <string name="tabbar_bottom_main">首页</string>
    <string name="tabbar_bottom_info">资讯</string>
    <string name="tabbar_bottom_market">行情</string>
    <string name="tabbar_bottom_mine">缆圈</string>


    <!--主页-->
    <string name="recommended_species">推荐种类</string>
    <string name="recommended_products">新型产品</string>
    <!--公司信息页面-->
    <string name="company_info">公司信息</string>
    <string name="company_name">河北弘飞线缆有限公司</string>
    <string name="company_introduce">公司简介</string>
    <string name="project_introduce">项目简介</string>
    <string name="company_introduce_content">该公司成立于1995年，注册资金1000晚，是河北省著名企业00000000000000000000000
        000000000000000000000000
        000000000000000000000000000000000000000
        000000000000000000000000000000000000000
        0000000000000000000000000000000000000000
        0000000000000000000000000000000000
        00000000000000000000000000000000000
        000000000000000000000000000000
        0000000000000000000000000000000000
        0000000000000000000000000000000000000000000000000000000000000000000000</string>
    <string name="company_majorProduct">主营产品</string>
    <string name="company_contactWay">联系方式</string>
    <string name="company_address">地址：</string>
    <string name="company_telphone">电话：</string>
    <string name="company_emali">邮箱：</string>
    <string name="company_postcode">邮编：</string>

    <!--产品信息-->
    <string name="prodect_lable">产品信息</string>
    <string name="prodectList_lable">产品列表</string>
    <string name="prodect_specifications">选择颜色和包装方式</string>
    <string name="prodect_selected">已选择：</string>
    <string name="prodect_cAnds">完善颜色包装方式</string>
    <string name="prodect_model">型号:</string>
    <string name="prodect_voltage">电压:</string>
    <string name="prodect_crossSection">横截面:</string>
    <string name="prodect_coreNumber">芯数:</string>
    <string name="prodect_purpose">用途:</string>
    <string name="prodect_applicationRange">应用范围:</string>
    <string name="prodect_outsideDiameter">平均外径上线:</string>
    <string name="prodect_diameterLimit">外径下限:</string>
    <string name="prodect_implementationStandards">执行标准:</string>
    <string name="prodect_conductorMaterial">导体材质:</string>
    <string name="prodect_sheathMaterial">护套材质:</string>
    <string name="prodect_referenceWeight">参考重量:</string>


    <string name="prodect_introduce">产品说明</string>
    <string name="prodect_detail">产品详情</string>
    <string name="prodect_detailContent"></string>
    <string name="prodect_phone">电话</string>
    <string name="prodect_collect">收藏</string>
    <string name="prodect_shoppingCat">购物车</string>
    <string name="product_selectColor">请选择规格,颜色分类</string>
    <string name="product_specifications">包装方式</string>
    <string name="product_color">颜色</string>
    <string name="product_warnning">100米轴为每轴100米，依次类推，如需其他长度，请联系厂家进行预约</string>
    <!--mine-->
    <string name="mine_myInfo">个人资料</string>
    <string name="mine_shopping">购物车</string>
    <string name="mine_favorite">收藏</string>
    <string name="mine_order">订单</string>
    <!--MyFavoriteActivity-->
    <string name="myfavorite_lable">我的收藏</string>
    <string name="favorite_emity">您还没有收藏宝贝</string>
    <string name="favorite_emity_to">快去收藏一个吧！</string>
    <!--myInfo-->
    <string name="myInfo_title">个人信息</string>
    <string name="myInfo_name">姓名</string>
    <string name="myInfo_sex">性别</string>
    <string name="myInfo_password">修改密码</string>
    <string name="myInfo_address">收货地址</string>
    <string name="myInfo_login_out">退出登录</string>

    <!--myName-->
    <string name="myName_hint">请输入您的昵称：</string>
    <string name="myName_number">/8</string>
    <string name="myName_text">昵称最多8个字符</string>
    <string name="myName_title">修改昵称</string>
    <string name="title_activity_my_name">修改姓名</string>

    <!--myPassword-->
    <string name="myPassword_before">原密码：</string>
    <string name="myPassword_update">请设置6-16位新密码：</string>
    <string name="myPassword_sure">确认密码：</string>
    <string name="myPassword_title">修改密码</string>

    <!--sexSelector-->
    <string name="sexSelector_sure">确定</string>

    <string name="title_activity_my_password">我的密码</string>


    <!--myShopping-->

    <string name="myShopping_allMoney">总金额:</string>
    <string name="myShopping_account">去结算</string>
    <string name="myShopping_selectAll">全选</string>
    <string name="myShopping_delete">删除</string>
    <string name="myShopping_menu_delete">删除</string>
    <string name="item_shopcart_group_edit">编辑</string>
    <string name="myShopping_noyunfei">不含运费</string>
    <string name="myShopping_color">颜色：</string>
    <string name="myShopping_specifications">单位：</string>


    <!--shoppingCart_empty-->
    <string name="shoppingCart_empty_empty">购物车还没有商品</string>
    <string name="shoppingCart_empty_shopping">快去逛逛吧</string>


    <!--internet_no-->
    <string name="internet_no">网络不给力哦</string>
    <string name="to_setting">请检查网络设置</string>


    <!--行业资讯-->
    <string name="button_text_reload">重新连接</string>
    <string name="infoDetail_lable">资讯详情</string>
    <string name="tip_text_data_loading">数据获取中...</string>
    <string name="tip_text_data_fail">数据获取失败，点击再次获取！</string>
    <string name="tip_speak_not_installed">无法朗读，请安装讯飞语音！</string>
    <string name="tip_speak_error">阅读错误！</string>
    <string name="title_activity_order_pay">订单支付</string>
    <!--订单-->
    <string name="order_detail">订单详情</string>
    <string name="myOrder_lable">我的订单</string>
    <string name="orderPayHint">订单提交完成，请您尽快支付！</string>
    <string name="orderPayHint1">请您在提交订单后</string>
    <string name="orderPayHint2">24小时内</string>
    <string name="orderPayHint3">完成支付！</string>
    <string name="orderNumber">订单编号：</string>
    <string name="orderMoney">订单金额：</string>
    <string name="selectPay">支付方式</string>
    <string name="confirmPayment">确认支付</string>
    <string name="orderPay">订单支付</string>
    <string name="orderCancle">取消订单</string>
    <string name="goPay">去支付</string>
    <!--Confirm receipt-->
    <string name="confirmReceipt">确认收货</string>
    <string name="viewLogistics">查看物流</string>
    <string name="orderState">订单状态：</string>
    <string name="orderTime">下单时间：</string>
    <string name="orderFreight">运费：</string>
    <string name="orderTotalMoney">订单总额：</string>
    <!--物流-->
    <string name="logisticsState">物流状态</string>
    <string name="logistics_company">承运公司：</string>
    <string name="logistics_num">运单编号：</string>
    <!--支付方式-->
    <string name="alipay">支付宝</string>
    <string name="weixin">微信</string>
    <string name="yinlian">银联</string>

    <!--login-->
    <string name="login_tel">请输入手机号</string>
    <string name="login_password">请输入密码(6-16位)</string>
    <string name="login_forgetPassword">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_login">登录</string>

    <!--register-->
    <string name="register_password_sure">请再次输入密码</string>
    <string name="register_verification_code">请输入验证码</string>
    <string name="register_verification_code_get">获取短信验证码</string>
    <string name="register">立即注册</string>
    <string name="title_activity_confirm_order">ConfirmOrderActivity</string>

    <!--image_crop-->
    <string name="image_crop_sure">确定</string>
    <string name="image_crop_cancel">返回</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--收货地址管理-->
    <string name="add_receiptAddress">新增收货地址</string>
    <string name="receiptAddress_lale">收货地址</string>
    <string name="title_activity_receipt_address">收货地址管理</string>
    <string name="address_emity">您还没有收货地址</string>
    <string name="address_emity_to">前去添加一个吧！</string>
    <!--addAddress-->
    <string name="add_address_lable"></string>
    <string name="add_address_selectCity">选择城市</string>
    <string name="add_consignee">收货人:</string>
    <string name="add_phone">手机号码:</string>
    <string name="add_localArea">所在地区:</string>
    <string name="add_addressDetail">详细地址:</string>
    <string name="hint_addressDetail">街道楼牌号等</string>
    <string name="add_address_confim">确认</string>
    <string name="add_address_del">删除</string>
    <string name="add_address_save">保存</string>
    <string name="defaule_address">默认地址</string>
    <string name="edit_address">编辑</string>
    <string name="delete_address">删除</string>


    <!--comfirm_order-->

    <string name="comfirm_order_sure">确认订单</string>
    <string name="comfirm_order_shouhuo">收货人：</string>
    <string name="comfirm_order_location">收获地址：</string>


    <!--行情-->
    <string name="market_lable">资讯详情</string>
    <string name="market_area">市场/地区</string>
    <string name="market_product_name">产品名称</string>
    <string name="market_average_price">平均价格:</string>
    <string name="market_fallorise">跌涨</string>
    <string name="market_min_price">最低价格:</string>
    <string name="market_max_price">最高价格:</string>
    <string name="market_factory_area">厂家/地区</string>
    <string name="market_data">日期</string>
    <string name="market_price_trend">价格走势</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--InputMyInfo-->
    <string name="title_activity_input_my_info">设置个人资料</string>
    <string name="input_my_info_head">头像</string>
    <string name="input_my_info_name">例如:张三</string>
    <string name="input_my_info_birthday">生日</string>
    <string name="input_my_info_save">保存个人信息</string>

    <!--InputCompanyInfo-->
    <string name="title_activity_input_company_info">设置公司信息</string>
    <string name="input_company_info_name">填写公司名称</string>
    <string name="input_company_info_name_legal">填写公司法人姓名</string>
    <string name="input_company_info_tel">填写公司联系电话</string>
    <string name="input_company_save">保存公司信息</string>

    <!--物流详情-->
    <string name="logistics_detail">物流详情</string>
    <!--album_select_dialog-->
    <string name="dialog_selectFromAlbum">从相册中选择</string>
    <string name="dialog_photo">拍照</string>
    <string name="dialog_album_cancel">取消</string>

    <!--PaySuccessActivity-->
    <string name="title_activity_pay_success">支付完成</string>
    <string name="title_activity_test">test</string>

    <!--最新项目-->
    <string name="new_project_lable">最新项目</string>

    <string name="transition_book_img">transition_book_img</string>
</resources>
