<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hbhongfei.hfcable.activity.RegisterActivity">
    <LinearLayout
        android:id="@+id/register_l"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">
        <EditText
            android:id="@+id/Txt_tel_fragment_user"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_height="50dp"
            android:inputType="phone"
            android:background="@null"
            android:hint="@string/login_tel"/>

        <!--中间分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E8E8E8"/>
        <EditText
            android:id="@+id/Txt_tel_fragment_password"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:inputType="textPassword"
            android:digits="1234567890abcedfghijklmnopqrstuvwxyz@._"
            android:hint="@string/login_password"/>
        <!--中间分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E8E8E8"/>
        <EditText
            android:id="@+id/Txt_tel_fragment_password_sure"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:inputType="textPassword"
            android:digits="1234567890abcedfghijklmnopqrstuvwxyz@._"
            android:hint="@string/register_password_sure"/>
        <!--中间分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E8E8E8"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:id="@+id/Txt_tel_fragment_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:hint="@string/register_verification_code"/>
            <TextView
                android:id="@+id/TView_tel_fragment_get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/verification_code_background"
                android:text="@string/register_verification_code_get"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/register_l"
        android:background="@drawable/loginselector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
</RelativeLayout>
