<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hbhongfei.hfcable.activity.OrderPayActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/orderpay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderPayHint"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/orderPayHint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorRed"
            android:text="@string/orderPayHint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/orderPayHint3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderNumber"/>
        <TextView
            android:id="@+id/order_payNumber_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderMoney"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderNumber"/>
        <TextView
            android:id="@+id/order_payMoney_textview"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000￥"
            />

    </LinearLayout>
    <View  android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/orderpay"
        android:layout_marginTop="20dp"
        android:layout_height="50dp">
       <TextView
           android:text="@string/selectPay"
          android:layout_gravity="center"
           android:textSize="20dp"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
    </LinearLayout>
        <com.hbhongfei.hfcable.util.MyRadioGroup
            android:id="@+id/radio_group"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/order_pay_alipay_LLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:background="@drawable/linnerlayout_border"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_height="50dp">
        <!--<ImageView-->
            <!--android:id="@+id/order_pay_alipay_select_img"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:gravity="center"-->
            <!--android:src="@mipmap/select"/>-->
        <RadioButton
            android:id="@+id/order_pay_alipay_radioBtn"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@mipmap/alipay"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/alipay"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_pay_weixin_LLayout"
        android:orientation="horizontal"
        android:background="@drawable/linnerlayout_border"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_height="50dp">

        <RadioButton
            android:id="@+id/order_pay_weixin_radioBtn"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/weixin"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_pay_yinlian_LLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/linnerlayout_border"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_height="50dp">

        <RadioButton
            android:id="@+id/order_pay_yinlian_radioBtn"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/unionpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/yinlian"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        </com.hbhongfei.hfcable.util.MyRadioGroup>
    <Button
        android:id="@+id/btn_orderPay"
        android:textSize="20dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/colorWhite"
        android:text="@string/confirmPayment"
        android:background="@drawable/btn_pay_background"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
