<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/my_dialog_background"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_selectFromAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_selectFromAlbum"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="15sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/dialog_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_photo"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="15sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_below_left_background">
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/dialog_album_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_album_cancel"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textSize="15sp"/>


    </LinearLayout>

</LinearLayout>