<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hbhongfei.hfcable.activity.MyPasswordActivity"
    tools:showIn="@layout/activity_my_password">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="40dp">
        <EditText
            android:id="@+id/Etext_myPassword_before"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/myPassword_before"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_height="40dp">
        <EditText
            android:id="@+id/Etext_myPassword_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/myPassword_update"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_height="40dp">
        <EditText
            android:id="@+id/Etext_myPassword_sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/myPassword_sure"/>
    </LinearLayout>
</LinearLayout>
