<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhiteBlack"
    tools:context="com.hbhongfei.hfcable.activity.MyNameActivity">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite">
        <EditText
            android:id="@+id/Etext_myName_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:maxLength="8"
            android:hint="@string/myName_hint"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/Tview_myName_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Tview_myName_number"
                android:text="@string/myName_number"/>
        </RelativeLayout>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myName_text"
        android:layout_below="@id/r1"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>
