<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hbhongfei.hfcable.activity.InputCompanyInfoActivity"
    tools:showIn="@layout/activity_input_company_info">
    <LinearLayout
        android:id="@+id/LLayout_inputCompanyInfo_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">
        <EditText
            android:id="@+id/Etext_inputCompanyInfo_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_company_info_name"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLayout_inputCompanyInfo_name_legal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/LLayout_inputCompanyInfo_name"
        android:background="@color/colorWhite">
        <EditText
            android:id="@+id/Etext_inputCompanyInfo_name_legal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_company_info_name_legal"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLayout_inputCompanyInfo_tel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/LLayout_inputCompanyInfo_name_legal"
        android:background="@color/colorWhite">
        <EditText
            android:id="@+id/Etext_inputCompanyInfo_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_company_info_tel"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"/>
    </LinearLayout>
    <TextView
        android:id="@+id/Tview_inputCompanyInfo_saveInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorRed"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/input_my_info_save"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>
